Cleaned files and edited front page

--- a/country.html
+++ b/country.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-    <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="./country.css" />
+    <link rel="stylesheet" href="CSS%20Files/global.css" />
+    <link rel="stylesheet" href="CSS%20Files/country.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Times New Roman:wght@400;700&display=swap"
