--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-    <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="CSS%20Files/global.css" />
+    <link rel="stylesheet" href="CSS%20Files/index.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Times New Roman:wght@400;700&display=swap"
@@ -37,11 +37,28 @@
           <b class="website-title">Website Title</b>
           <input class="search-bar" type="text" />
 
+          <div class="row">
+
+            <div class="padding">
+
           <button class="choose-country-btn" id="search-country">
             <div class="text">
               <div class="search-country">Search Country</div>
             </div>
           </button>
+
+           </div>
+            <div class="padding">
+
+            <button class="choose-country-btn" id="search-year">
+            <div class="text2">
+              <div class="search-year">Search Year</div>
+            </div>
+          </button>
+          </div>
+
+          </div>
+
         </div>
       </div>
     </div>
