Edited scrollability of home page

--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
       </div>
     </div>
 
+
+<!--David pa lipat nito sa file nlg-->
+
     <script>
       var drawercountryBtn = document.getElementById("drawercountryBtn");
       if (drawercountryBtn) {
