--- a/index.html
+++ b/index.html
@@ -11,33 +11,43 @@
       href="https://fonts.googleapis.com/css2?family=Times New Roman:wght@400;700&display=swap"
     />
   </head>
+
   <body>
+
+  <!-- Front Page background -->
+
     <div class="home">
       <div class="content-wrapper">
         <div class="carousel">
           <img
-            class="roof-and-columns-of-the-natura"
+            class="Front-pic-1"
             alt=""
             src="./public/roof-and-columns-of-the-natural-history-museum-of-marseille-under-the-sunlight-in-france@2x.png"
           />
 
           <img
-            class="amazing-aerial-shot-of-a-moder"
+            class="Front-pic-2"
             alt=""
             src="./public/amazing-aerial-shot-of-a-modern-bridge-in-the-countryside-village-in-the-philippines@2x.png"
           />
 
           <img
-            class="roof-and-columns-of-the-natura"
+            class="Front-pic-3"
             alt=""
             src="./public/roof-and-columns-of-the-natural-history-museum-of-marseille-under-the-sunlight-in-france@2x.png"
           />
         </div>
+
+   <!-- WebSite Title -->
+
         <div class="title-wrapper">
+
           <b class="website-title">Website Title</b>
           <input class="search-bar" type="text" />
 
           <div class="row">
+
+   <!-- Country btn-->
 
             <div class="padding">
 
@@ -47,7 +57,8 @@
             </div>
           </button>
 
-           </div>
+   <!-- Year btn-->
+            </div>
             <div class="padding">
 
             <button class="choose-country-btn" id="search-year">
@@ -62,6 +73,9 @@
         </div>
       </div>
     </div>
+
+
+  <!-- Country pop up -->
 
     <div
       id="searchByCountryWrapper"
@@ -126,63 +140,74 @@
       </div>
     </div>
 
+   <!-- Year pop up -->
 
-<!--David pa lipat nito sa file nlg-->
+    <div
+            id="searchByYearWrapper"
+            class="popup-overlay"
+            style="display: none"
+    >
+      <div class="search-by-country-wrapper" data-animate-on-scroll>
+        <div class="row-1">
+          <button class="country-btn" id="draweryearBtn">
+            <div class="text10">
+              <div class="switzerland">1521</div>
+            </div>
+          </button>
+          <button class="country-btn1">
+            <div class="text10">
+              <div class="switzerland">Switzerland</div>
+            </div>
+          </button>
+          <button class="country-btn1">
+            <div class="text10">
+              <div class="switzerland">Japan</div>
+            </div>
+          </button>
+          <button class="country-btn1">
+            <div class="text10">
+              <div class="switzerland">United States</div>
+            </div>
+          </button>
+          <button class="country-btn1">
+            <div class="text10">
+              <div class="switzerland">Canada</div>
+            </div>
+          </button>
+        </div>
+        <div class="row-1">
+          <button class="country-btn1">
+            <div class="text10">
+              <div class="switzerland">Australia</div>
+            </div>
+          </button>
+          <button class="country-btn1">
+            <div class="text10">
+              <div class="switzerland">Sweden</div>
+            </div>
+          </button>
+          <button class="country-btn1">
+            <div class="text10">
+              <div class="switzerland">Germany</div>
+            </div>
+          </button>
+          <button class="country-btn1">
+            <div class="text10">
+              <div class="switzerland">United Kingdom</div>
+            </div>
+          </button>
+          <button class="country-btn1">
+            <div class="text10">
+              <div class="switzerland">New Zealand</div>
+            </div>
+          </button>
+        </div>
+      </div>
+    </div>
 
-    <script>
-      var drawercountryBtn = document.getElementById("drawercountryBtn");
-      if (drawercountryBtn) {
-        drawercountryBtn.addEventListener("click", function (e) {
-          window.location.href = "./country.html";
-        });
-      }
-      var scrollAnimElements = document.querySelectorAll("[data-animate-on-scroll]");
-      var observer = new IntersectionObserver(
-        (entries) => {
-          for (const entry of entries) {
-            if (entry.isIntersecting || entry.intersectionRatio > 0) {
-              const targetElement = entry.target;
-              targetElement.classList.add("animate");
-              observer.unobserve(targetElement);
-            }
-          }
-        },
-        {
-          threshold: 0.15,
-        }
-      );
-      for (let i = 0; i < scrollAnimElements.length; i++) {
-        observer.observe(scrollAnimElements[i]);
-      }
-      
-      var chooseCountryBtn = document.getElementById("search-country");
-      if (chooseCountryBtn) {
-        chooseCountryBtn.addEventListener("click", function () {
-          var drawerOverlay = document.getElementById("searchByCountryWrapper");
-          if (!drawerOverlay) return;
-          var drawerOverlayStyle = drawerOverlay.style;
-          if (drawerOverlayStyle) {
-            drawerOverlayStyle.display = "flex";
-            drawerOverlayStyle.zIndex = 99;
-            drawerOverlayStyle.backgroundColor = "rgba(113, 113, 113, 0.3)";
-            drawerOverlayStyle.alignItems = "center";
-            drawerOverlayStyle.justifyContent = "flex-end";
-          }
-          drawerOverlay.setAttribute("closable", "");
-      
-          var onClick =
-            drawerOverlay.onClick ||
-            function (e) {
-              if (
-                e.target === drawerOverlay &&
-                drawerOverlay.hasAttribute("closable")
-              ) {
-                drawerOverlayStyle.display = "none";
-              }
-            };
-          drawerOverlay.addEventListener("click", onClick);
-        });
-      }
-      </script>
+
+
+
+    <script src="JavaScript/index.js"> </script>
   </body>
 </html>
