Added design changes to follow format in canva

--- a/index.html
+++ b/index.html
@@ -86,54 +86,56 @@
         <div class="row-1">
           <button class="country-btn" id="drawercountryBtn">
             <div class="text10">
-              <div class="switzerland">Philippines</div>
+              <div class="Country">Philippines</div>
             </div>
           </button>
           <button class="country-btn1">
             <div class="text10">
-              <div class="switzerland">Switzerland</div>
+              <div class="Country">Switzerland</div>
             </div>
           </button>
           <button class="country-btn1">
             <div class="text10">
-              <div class="switzerland">Japan</div>
+              <div class="Country">Japan</div>
             </div>
           </button>
           <button class="country-btn1">
             <div class="text10">
-              <div class="switzerland">United States</div>
+              <div class="Country">United States</div>
             </div>
           </button>
           <button class="country-btn1">
             <div class="text10">
-              <div class="switzerland">Canada</div>
+              <div class="Country">Canada</div>
             </div>
           </button>
         </div>
+
+
         <div class="row-1">
           <button class="country-btn1">
             <div class="text10">
-              <div class="switzerland">Australia</div>
+              <div class="Country">Australia</div>
             </div>
           </button>
           <button class="country-btn1">
             <div class="text10">
-              <div class="switzerland">Sweden</div>
+              <div class="Country">Sweden</div>
             </div>
           </button>
           <button class="country-btn1">
             <div class="text10">
-              <div class="switzerland">Germany</div>
+              <div class="Country">Germany</div>
             </div>
           </button>
           <button class="country-btn1">
             <div class="text10">
-              <div class="switzerland">United Kingdom</div>
+              <div class="Country">United Kingdom</div>
             </div>
           </button>
           <button class="country-btn1">
             <div class="text10">
-              <div class="switzerland">New Zealand</div>
+              <div class="Country">New Zealand</div>
             </div>
           </button>
         </div>
@@ -151,54 +153,57 @@
         <div class="row-1">
           <button class="country-btn" id="draweryearBtn">
             <div class="text10">
-              <div class="switzerland">1521</div>
+              <div class="Country">1521</div>
             </div>
           </button>
           <button class="country-btn1">
             <div class="text10">
-              <div class="switzerland">Switzerland</div>
+              <div class="Country">Switzerland</div>
             </div>
           </button>
           <button class="country-btn1">
             <div class="text10">
-              <div class="switzerland">Japan</div>
+              <div class="Country">Japan</div>
             </div>
           </button>
           <button class="country-btn1">
             <div class="text10">
-              <div class="switzerland">United States</div>
+              <div class="Country">United States</div>
             </div>
           </button>
           <button class="country-btn1">
             <div class="text10">
-              <div class="switzerland">Canada</div>
+              <div class="Country">Canada</div>
             </div>
           </button>
         </div>
+
+
+
         <div class="row-1">
           <button class="country-btn1">
             <div class="text10">
-              <div class="switzerland">Australia</div>
+              <div class="Country">Australia</div>
             </div>
           </button>
           <button class="country-btn1">
             <div class="text10">
-              <div class="switzerland">Sweden</div>
+              <div class="Country">Sweden</div>
             </div>
           </button>
           <button class="country-btn1">
             <div class="text10">
-              <div class="switzerland">Germany</div>
+              <div class="Country">Germany</div>
             </div>
           </button>
           <button class="country-btn1">
             <div class="text10">
-              <div class="switzerland">United Kingdom</div>
+              <div class="Country">United Kingdom</div>
             </div>
           </button>
           <button class="country-btn1">
             <div class="text10">
-              <div class="switzerland">New Zealand</div>
+              <div class="Country">New Zealand</div>
             </div>
           </button>
         </div>
