--- a/country.html
+++ b/country.html
@@ -122,20 +122,6 @@
     </div>
 </div>
 
-<script>
-    var iconlyLightOutlineArrowL = document.getElementById("back-btn");
-    if (iconlyLightOutlineArrowL) {
-        iconlyLightOutlineArrowL.addEventListener("click", function (e) {
-            window.location.href = "./index.html";
-        });
-    }
-
-    var byYearInfo8 = document.getElementById("byYearInfo8");
-    if (byYearInfo8) {
-        byYearInfo8.addEventListener("click", function (e) {
-            window.location.href = "./by-year.html";
-        });
-    }
-</script>
+<script src="JavaScript/country.js"> </script>
 </body>
 </html>
