edited some stuff
unsolicited comment ni basil : ice cream yummy

--- a/country.html
+++ b/country.html
@@ -38,11 +38,11 @@
 
             <div class="country-information">
                 <div class="information">
-                    <div class="by-year-info-8" id="byYearInfo8">
+                    <div class="infos" id="byYearInfo8">
                         <div class="img"></div>
                         <div class="text1">
                             <b class="b">1946</b>
-                            <div class="lorem-ipsum-dolor">
+                            <div class="Sentence">
                                 Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
                                 tellus at. Senectus phasellus morbi nibh pellentesque pharetra
                                 porttitor. Sollicitudin pharetra nisl cursus viverra molestie
@@ -53,11 +53,11 @@
                     </div>
 
 
-                    <div class="by-year-info-7">
+                    <div class="info">
                         <div class="img"></div>
                         <div class="text1">
                             <b class="b">1946</b>
-                            <div class="lorem-ipsum-dolor">
+                            <div class="Sentence">
                                 Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
                                 tellus at. Senectus phasellus morbi nibh pellentesque pharetra
                                 porttitor. Sollicitudin pharetra nisl cursus viverra molestie
@@ -68,11 +68,11 @@
                     </div>
 
 
-                    <div class="by-year-info-7">
+                    <div class="info">
                         <div class="img"></div>
                         <div class="text1">
                             <b class="b">1946</b>
-                            <div class="lorem-ipsum-dolor">
+                            <div class="Sentence">
                                 Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
                                 tellus at. Senectus phasellus morbi nibh pellentesque pharetra
                                 porttitor. Sollicitudin pharetra nisl cursus viverra molestie
@@ -83,11 +83,11 @@
                     </div>
 
 
-                    <div class="by-year-info-7">
+                    <div class="info">
                         <div class="img"></div>
                         <div class="text1">
                             <b class="b">1946</b>
-                            <div class="lorem-ipsum-dolor">
+                            <div class="Sentence">
                                 Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
                                 tellus at. Senectus phasellus morbi nibh pellentesque pharetra
                                 porttitor. Sollicitudin pharetra nisl cursus viverra molestie
@@ -98,11 +98,11 @@
                     </div>
 
 
-                    <div class="by-year-info-7">
+                    <div class="info">
                         <div class="img"></div>
                         <div class="text1">
                             <b class="b">1946</b>
-                            <div class="lorem-ipsum-dolor">
+                            <div class="Sentence">
                                 Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
                                 tellus at. Senectus phasellus morbi nibh pellentesque pharetra
                                 porttitor. Sollicitudin pharetra nisl cursus viverra molestie
