--- a/country.html
+++ b/country.html
@@ -39,7 +39,7 @@
             <div class="country-information">
                 <div class="information">
                     <div class="infos" id="byYearInfo8">
-                        <div class="img"></div>
+                        <img src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/436896/795014/main-image">
                         <div class="text1">
                             <b class="b">1946</b>
                             <div class="Sentence">
