editing index.html

--- a/by-year.html
+++ b/by-year.html
@@ -14,12 +14,15 @@
 <body>
 <div class="year">
 
+    <!--Nav bar-->
+
     <div class="nav-bar-wrapper1">
         <div class="nav-bar1">
             <b class="website-title2">Website name</b>
         </div>
     </div>
 
+   <!-- back button -->
 
     <div class="back-btn-parent">
 
@@ -34,7 +37,7 @@
             <b class="website-title2">Timeline</b>
         </div>
 
-
+     <!-- content of country.html -->
         <div class="selected-year-info">
             <b class="year1">Year</b>
             <div class="year-info-wrapper">
