--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
 
 <section class="home">
+    <video class="video-slide" src="public/5924631-uhd_3840_2160_30fps.mp4" autoplay muted loop></video>
     <div class="content">
         <h1 class="title">Website Name</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -31,21 +32,16 @@
 
                 <div class="btn-padding">
 
-                    <button class="btn" id="era">
-                        <div class="text">
-                            <div class="search-country">Find Era</div>
-                        </div>
-                    </button>
+                    <button class="btn" id="era"> Era </button>
 
-                    <!-- Year btn-->
                 </div>
+
+                <!-- Year btn-->
+
                 <div class="btn-padding">
 
-                    <button class="btn" id="year">
-                        <div class="text2">
-                            <div class="search-year">Find Year</div>
-                        </div>
-                    </button>
+                    <button class="btn" id="year"> Year </button>
+
                 </div>
 
             </div>
