--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 <section class="home">
-    <video class="video-slide" src="public/5924631-uhd_3840_2160_30fps.mp4" autoplay muted loop></video>
+    <video class="video-slide" src="public/Banaue.mp4" autoplay muted loop></video>
     <div class="content">
         <h1 class="title">Website Name</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
