--- a/index.html
+++ b/index.html
@@ -18,39 +18,73 @@
 
 <body>
 
-<section class="home">
-    <video class="video-slide" src="public/Banaue.mp4" autoplay muted loop></video>
-    <div class="content">
-        <h1 class="title">Website Name</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.</p>
+<section class="section">
+    <div class="home" id="blur">
+        <video autoplay class="video-slide" loop muted src="public/Banaue.mp4"></video>
+        <div class="content">
+            <h1 class="title">Website Name</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore
+                magna aliqua.</p>
 
-        <div class="btn-cont">
-            <div class="row">
+            <div class="btn-cont">
+                <div class="row">
 
-                <!-- Country btn -->
+                    <!-- Country btn -->
 
-                <div class="btn-padding">
+                    <div class="btn-padding">
 
-                    <button class="btn" id="era"> Era </button>
+                        <button class="btn" id="era" onClick="toggle()"> Take me</button>
 
-                </div>
-
-                <!-- Year btn-->
-
-                <div class="btn-padding">
-
-                    <button class="btn" id="year"> Year </button>
+                    </div>
 
                 </div>
+            </div>
 
+        </div>
+    </div>
+
+    <div id="popup">
+
+        <div class="contain">
+            <div class="era-padding">
+                <button class="era-btn">Era</button>
+            </div>
+
+            <div class="era-padding">
+
+                <button class="era-btn">Era</button>
+            </div>
+
+            <div class="era-padding">
+                <button class="era-btn">Era</button>
+            </div>
+
+            <div class="era-padding">
+                <button class="era-btn">Era</button>
+            </div>
+
+            <div class="era-padding">
+                <button class="era-btn">Era</button>
+            </div>
+
+            <div class="era-padding">
+                <button class="era-btn">Era</button>
             </div>
         </div>
 
     </div>
 
+    <!-- Country pop up -->
+    <div>
+
+
+    </div>
+
 
 </section>
+
+
 <!-- Swiper JS -->
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
