Added some changes to index.html and connected country.html to index

--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
     <meta charset="utf-8"/>
     <meta content="initial-scale=1, width=device-width" name="viewport"/>
 
-    <link
-            href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-            rel="stylesheet"
-    />
-
     <link href="CSS%20Files/global.css" rel="stylesheet"/>
     <link href="CSS%20Files/index.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Times New Roman:wght@400;700&display=swap" rel="stylesheet"/>
@@ -34,7 +29,7 @@
 
                     <div class="btn-padding">
 
-                        <button class="btn" id="era" onClick="toggle()"> Take me</button>
+                        <a class="btn" href="country.html" id="era"> Take me</a>
 
                     </div>
 
@@ -44,51 +39,62 @@
         </div>
     </div>
 
-    <div id="popup">
 
-        <div class="contain">
-            <div class="era-padding">
-                <button class="era-btn">Era</button>
-            </div>
+</section>
 
-            <div class="era-padding">
+<section class="features" id="About">
+    <h2 class="heading">About</h2>
 
-                <button class="era-btn">Era</button>
-            </div>
+    <div class="row">
+        <div class="col">
 
-            <div class="era-padding">
-                <button class="era-btn">Era</button>
-            </div>
 
-            <div class="era-padding">
-                <button class="era-btn">Era</button>
-            </div>
-
-            <div class="era-padding">
-                <button class="era-btn">Era</button>
-            </div>
-
-            <div class="era-padding">
-                <button class="era-btn">Era</button>
-            </div>
         </div>
-
-    </div>
-
-    <!-- Country pop up -->
-    <div>
+        <div class="col">
 
 
+        </div>
     </div>
 
 
 </section>
+<section class="features" id="features">
+    <h2 class="heading">Features</h2>
+
+    <div class="row">
+        <div class="col">
+
+            <h3>Navigation</h3>
+
+        </div>
+        <div class="col">
 
 
-<!-- Swiper JS -->
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-<script src="JavaScript/index.js"></script>
+        </div>
+    </div>
+
+
+</section>
+<section class="contact" id="contact">
+    <h2 class="contacthead">Contact Us</h2>
+
+    <div class="contact-details">
+
+    </div>
+</section>
+
+<!--FOOTER ENDING-->
+<footer class="footer">
+    <div class="footer-text">
+        <p>Copyright &copy; 2024 by Caberte, Wagan, Gulapa, Dela Torre, Perdido | All Rights Reserved</p>
+    </div>
+
+    <div class="footer-iconTop">
+        <a href="#"><i class="fa-solid fa-chevron-up"></i></a>
+    </div>
+</footer>
+
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/13665e3f06.js"></script>
 
 </body>
 </html>
