--- a/country.html
+++ b/country.html
@@ -1,124 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <!--  -->
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="IE-edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Website Name</title> <!-- To be follow -->
     <!--<link rel="icon" href="resources/pictures/favicon.ico" type="image/x-icon"> -->
-    <link rel="stylesheet" href="CSS%20Files/country.css">
-  </head>
+    <link href="CSS%20Files/country.css" rel="stylesheet">
+</head>
 
-  <body>
-    <header class="header">
-      <nav>
+<body>
+<header class="header">
+    <nav>
         <a href="index.html">Website Name</a>
         <div class="nav-links" id="navLinks">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-          </ul>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+            </ul>
         </div>
-      </nav>
-    </header>
+    </nav>
+</header>
 
-      <section class="main">
-        <div class="country-information">
-          <h1><i class="fa-solid fa-arrow-left"></i>Country Name</h1>
-          <div class="row">
+<section class="main">
+    <div class="country-information">
+        <h1><a href="index.html"><i class="fa-solid fa-arrow-left"></i></a> Country Name</h1>
+        <div class="row">
             <div class="col">
 
-              <div class="text-box">
-                <h2>Year</h2>
-                <h3>Title</h3>
-                <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
-                  tellus at. Senectus phasellus morbi nibh pellentesque pharetra
-                  porttitor. Sollicitudin pharetra nisl cursus viverra molestie
-                  est tincidunt. Purus libero tellus dui tincidunt risus neque
-                  sollicitudin sit duis.</p>
-              </div>
+                <div class="text-box">
+                    <h2>Year</h2>
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
+                        tellus at. Senectus phasellus morbi nibh pellentesque pharetra
+                        porttitor. Sollicitudin pharetra nisl cursus viverra molestie
+                        est tincidunt. Purus libero tellus dui tincidunt risus neque
+                        sollicitudin sit duis.</p>
+                </div>
 
-              <div class="text-box">
-                <h2>Year</h2>
-                <h3>Title</h3>
-                <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
-                  tellus at. Senectus phasellus morbi nibh pellentesque pharetra
-                  porttitor. Sollicitudin pharetra nisl cursus viverra molestie
-                  est tincidunt. Purus libero tellus dui tincidunt risus neque
-                  sollicitudin sit duis.</p>
-              </div>
+                <div class="text-box">
+                    <h2>Year</h2>
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
+                        tellus at. Senectus phasellus morbi nibh pellentesque pharetra
+                        porttitor. Sollicitudin pharetra nisl cursus viverra molestie
+                        est tincidunt. Purus libero tellus dui tincidunt risus neque
+                        sollicitudin sit duis.</p>
+                </div>
 
-              <div class="text-box">
-                <h2>Year</h2>
-                <h3>Title</h3>
-                <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
-                  tellus at. Senectus phasellus morbi nibh pellentesque pharetra
-                  porttitor. Sollicitudin pharetra nisl cursus viverra molestie
-                  est tincidunt. Purus libero tellus dui tincidunt risus neque
-                  sollicitudin sit duis.</p>
-              </div>
+                <div class="text-box">
+                    <h2>Year</h2>
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
+                        tellus at. Senectus phasellus morbi nibh pellentesque pharetra
+                        porttitor. Sollicitudin pharetra nisl cursus viverra molestie
+                        est tincidunt. Purus libero tellus dui tincidunt risus neque
+                        sollicitudin sit duis.</p>
+                </div>
 
-              <div class="text-box">
-                <h2>Year</h2>
-                <h3>Title</h3>
-                <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
-                  tellus at. Senectus phasellus morbi nibh pellentesque pharetra
-                  porttitor. Sollicitudin pharetra nisl cursus viverra molestie
-                  est tincidunt. Purus libero tellus dui tincidunt risus neque
-                  sollicitudin sit duis.</p>
-              </div>
+                <div class="text-box">
+                    <h2>Year</h2>
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
+                        tellus at. Senectus phasellus morbi nibh pellentesque pharetra
+                        porttitor. Sollicitudin pharetra nisl cursus viverra molestie
+                        est tincidunt. Purus libero tellus dui tincidunt risus neque
+                        sollicitudin sit duis.</p>
+                </div>
 
-              <div class="text-box">
-                <h2>Year</h2>
-                <h3>Title</h3>
-                <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
-                  tellus at. Senectus phasellus morbi nibh pellentesque pharetra
-                  porttitor. Sollicitudin pharetra nisl cursus viverra molestie
-                  est tincidunt. Purus libero tellus dui tincidunt risus neque
-                  sollicitudin sit duis.</p>
-              </div>
+                <div class="text-box">
+                    <h2>Year</h2>
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
+                        tellus at. Senectus phasellus morbi nibh pellentesque pharetra
+                        porttitor. Sollicitudin pharetra nisl cursus viverra molestie
+                        est tincidunt. Purus libero tellus dui tincidunt risus neque
+                        sollicitudin sit duis.</p>
+                </div>
 
-              <div class="text-box">
-                <h2>Year</h2>
-                <h3>Title</h3>
-                <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
-                  tellus at. Senectus phasellus morbi nibh pellentesque pharetra
-                  porttitor. Sollicitudin pharetra nisl cursus viverra molestie
-                  est tincidunt. Purus libero tellus dui tincidunt risus neque
-                  sollicitudin sit duis.</p>
-              </div>
+                <div class="text-box">
+                    <h2>Year</h2>
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
+                        tellus at. Senectus phasellus morbi nibh pellentesque pharetra
+                        porttitor. Sollicitudin pharetra nisl cursus viverra molestie
+                        est tincidunt. Purus libero tellus dui tincidunt risus neque
+                        sollicitudin sit duis.</p>
+                </div>
 
-              <div class="text-box">
-                <h2>Year</h2>
-                <h3>Title</h3>
-                <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
-                  tellus at. Senectus phasellus morbi nibh pellentesque pharetra
-                  porttitor. Sollicitudin pharetra nisl cursus viverra molestie
-                  est tincidunt. Purus libero tellus dui tincidunt risus neque
-                  sollicitudin sit duis.</p>
-              </div>
+                <div class="text-box">
+                    <h2>Year</h2>
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
+                        tellus at. Senectus phasellus morbi nibh pellentesque pharetra
+                        porttitor. Sollicitudin pharetra nisl cursus viverra molestie
+                        est tincidunt. Purus libero tellus dui tincidunt risus neque
+                        sollicitudin sit duis.</p>
+                </div>
 
             </div>
             <div class="col">
-              <img class="img" src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/436896/795014/main-image">
+                <img class="img"
+                     src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/436896/795014/main-image">
             </div>
-          </div>
         </div>
-      </section>
+    </div>
+</section>
 
-    <!--FOOTER ENDING-->
-    <footer class="footer">
-      <div class="footer-text">
+<!--FOOTER ENDING-->
+<footer class="footer">
+    <div class="footer-text">
         <p>Copyright &copy; 2024 by Caberte, Wagan, Gulapa, Dela Torre, Perdido | All Rights Reserved</p>
-      </div>
+    </div>
 
-      <div class="footer-iconTop">
+    <div class="footer-iconTop">
         <a href="#"><i class="fa-solid fa-chevron-up"></i></a>
-      </div>
-    </footer>
+    </div>
+</footer>
 
-  <!--JAVASCRIPT-->
-    <script src="https://kit.fontawesome.com/13665e3f06.js" crossorigin="anonymous"></script>
+<!--JAVASCRIPT-->
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/13665e3f06.js"></script>
 
-  </body>
+</body>
 </html>
