--- a/country.html
+++ b/country.html
@@ -29,8 +29,8 @@
             <div class="col">
 
                 <div class="text-box">
-                    <h2>Year</h2>
-                    <h3>Title</h3>
+                    <h2>Pre-Colonial Period</h2>
+
                     <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
                         tellus at. Senectus phasellus morbi nibh pellentesque pharetra
                         porttitor. Sollicitudin pharetra nisl cursus viverra molestie
@@ -39,8 +39,8 @@
                 </div>
 
                 <div class="text-box">
-                    <h2>Year</h2>
-                    <h3>Title</h3>
+                    <h2>Spanish Colonial Period</h2>
+
                     <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
                         tellus at. Senectus phasellus morbi nibh pellentesque pharetra
                         porttitor. Sollicitudin pharetra nisl cursus viverra molestie
@@ -49,8 +49,8 @@
                 </div>
 
                 <div class="text-box">
-                    <h2>Year</h2>
-                    <h3>Title</h3>
+                    <h2>American Colonial Period</h2>
+
                     <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
                         tellus at. Senectus phasellus morbi nibh pellentesque pharetra
                         porttitor. Sollicitudin pharetra nisl cursus viverra molestie
@@ -59,8 +59,8 @@
                 </div>
 
                 <div class="text-box">
-                    <h2>Year</h2>
-                    <h3>Title</h3>
+                    <h2>World War II and Japanese Occupation </h2>
+
                     <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
                         tellus at. Senectus phasellus morbi nibh pellentesque pharetra
                         porttitor. Sollicitudin pharetra nisl cursus viverra molestie
@@ -69,8 +69,8 @@
                 </div>
 
                 <div class="text-box">
-                    <h2>Year</h2>
-                    <h3>Title</h3>
+                    <h2>Philippine Independence and the Third Republic</h2>
+
                     <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
                         tellus at. Senectus phasellus morbi nibh pellentesque pharetra
                         porttitor. Sollicitudin pharetra nisl cursus viverra molestie
@@ -79,8 +79,8 @@
                 </div>
 
                 <div class="text-box">
-                    <h2>Year</h2>
-                    <h3>Title</h3>
+                    <h2>Martial Law Era</h2>
+
                     <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
                         tellus at. Senectus phasellus morbi nibh pellentesque pharetra
                         porttitor. Sollicitudin pharetra nisl cursus viverra molestie
@@ -89,8 +89,8 @@
                 </div>
 
                 <div class="text-box">
-                    <h2>Year</h2>
-                    <h3>Title</h3>
+                    <h2>Contemporary Period</h2>
+
                     <p>Lorem ipsum dolor sit amet consectetur. Eu morbi in cursus
                         tellus at. Senectus phasellus morbi nibh pellentesque pharetra
                         porttitor. Sollicitudin pharetra nisl cursus viverra molestie
@@ -101,7 +101,7 @@
             </div>
             <div class="col">
                 <img class="img"
-                     src="https://collectionapi.metmuseum.org/api/collection/v1/iiif/436896/795014/main-image">
+                     src="public/ph%20map%20.jpg">
             </div>
         </div>
     </div>
