--- a/japanese.html
+++ b/japanese.html
@@ -8,13 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Name</title> <!-- To be follow -->
     <!--<link rel="icon" href="resources/pictures/favicon.ico" type="image/x-icon"> -->
-    <link rel="stylesheet" href="CSS%20Files/spanish.css">
+    <link rel="stylesheet" href="CSS%20Files/japanese.css">
   </head>
 
   <body>
     <header class="header">
       <nav>
-        <a href="front.html">Japanesee Colonial Period</a>
+        <a href="front.html">Japanese Colonial Period</a>
         <div class="nav-links" id="navLinks">
           <ul>
             <li><a href="front.html">Home</a></li>
