--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Name</title>
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>Bayan at Panahon</title>
 
     <link href="CSS%20Files/global.css" rel="stylesheet"/>
     <link href="CSS%20Files/index.css" rel="stylesheet"/>
@@ -15,21 +15,21 @@
 
 <body>
 
-    <!--NAVIGATION BAR WITH LOGO-->
-    <header class="header">
-        <nav class="navbar">
-            <div class="nav-links" id="navLinks">
-                <i class="fa-solid fa-xmark" onclick="hideMenu()"></i> <!-- close icon -->
-                <ul>
-                    <li><a href="#Home">Home</a></li>
-                    <li><a href="#About">About</a></li>
-                    <li><a href="#Contact">Contact</a></li>
-                </ul>
-            </div>
-            <i class="fa-solid fa-bars" onclick="showMenu()"></i> <!-- menu icon -->
-        </nav>
+<!--NAVIGATION BAR WITH LOGO-->
+<header class="header">
+    <nav class="navbar">
+        <div class="nav-links" id="navLinks">
+            <i class="fa-solid fa-xmark" onclick="hideMenu()"></i> <!-- close icon -->
+            <ul>
+                <li><a href="#Home">Home</a></li>
+                <li><a href="#About">About</a></li>
+                <li><a href="#Contact">Contact</a></li>
+            </ul>
+        </div>
+        <i class="fa-solid fa-bars" onclick="showMenu()"></i> <!-- menu icon -->
+    </nav>
 
-    </header>
+</header>
 
 <section class="home" id="Home">
     <div class="home" id="blur">
@@ -45,7 +45,7 @@
 
                     <div class="btn-padding">
 
-                        <a class="btn" href="country.html" id="era"> Take me</a>
+                        <a class="btn" href="Timeline.html" id="era"> Take me</a>
 
                     </div>
 
@@ -64,11 +64,14 @@
     <div class="row-about">
         <div class="col">
             <h3>Misyon</h3>
-            <p>Ihatid ang kasaysayan ng Pilipinas sa bawat Pilipino, mula sa sinaunang panahon hanggang sa kasalukuyan, sa isang makabuluhan at madaling maunawaan na paraan upang mapalaganap ang kaalaman at pagmamahal sa ating bayan.</p>
+            <p>Ihatid ang kasaysayan ng Pilipinas sa bawat Pilipino, mula sa sinaunang panahon hanggang sa kasalukuyan,
+                sa isang makabuluhan at madaling maunawaan na paraan upang mapalaganap ang kaalaman at pagmamahal sa
+                ating bayan.</p>
         </div>
         <div class="col">
             <h3>Bisyon</h3>
-            <p>Isang makabagong pook-digital na nagsisilbing talaan ng kasaysayan ng Pilipinas, na nag-uugnay sa bawat Pilipino sa kanilang makulay na nakaraan at nagsisilbing inspirasyon para sa kinabukasan.</p>
+            <p>Isang makabagong pook-digital na nagsisilbing talaan ng kasaysayan ng Pilipinas, na nag-uugnay sa bawat
+                Pilipino sa kanilang makulay na nakaraan at nagsisilbing inspirasyon para sa kinabukasan.</p>
         </div>
     </div>
 
@@ -83,19 +86,24 @@
             <div class="col first">
                 <h3>Developers:</h3>
                 <p>Alliza Caberte
-                    <a href="https://facebook.com/alliza.caberte/"><i class="fa-brands fa-square-facebook" style="color: #a3784e;"></i></a>
+                    <a href="https://facebook.com/alliza.caberte/"><i class="fa-brands fa-square-facebook"
+                                                                      style="color: #a3784e;"></i></a>
                 </p>
                 <p>Vhiane Gulapa
-                    <a href="https://www.facebook.com/vhiane.angenae"><i class="fa-brands fa-square-facebook" style="color: #a3784e;"></i></a>
+                    <a href="https://www.facebook.com/vhiane.angenae"><i class="fa-brands fa-square-facebook"
+                                                                         style="color: #a3784e;"></i></a>
                 </p>
                 <p>Lianne Dela Torre
-                    <a href="https://www.facebook.com/liannelou.delatorre"><i class="fa-brands fa-square-facebook" style="color: #a3784e;"></i></a>
+                    <a href="https://www.facebook.com/liannelou.delatorre"><i class="fa-brands fa-square-facebook"
+                                                                              style="color: #a3784e;"></i></a>
                 </p>
                 <p>David Wagan
-                    <a href="https://www.facebook.com/rrredcrayons"><i class="fa-brands fa-square-facebook" style="color: #a3784e;"></i></a>
+                    <a href="https://www.facebook.com/rrredcrayons"><i class="fa-brands fa-square-facebook"
+                                                                       style="color: #a3784e;"></i></a>
                 </p>
                 <p>Keith Perdido
-                    <a href="https://www.facebook.com/keith.perdido"><i class="fa-brands fa-square-facebook" style="color: #a3784e;"></i></a>
+                    <a href="https://www.facebook.com/keith.perdido"><i class="fa-brands fa-square-facebook"
+                                                                        style="color: #a3784e;"></i></a>
                 </p>
             </div>
 
