Hibla ng Kasaysayan wow hiblaaaaa

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Bayan at Panahon</title>
+    <title>Hibla ng Kasaysayan</title>
 
     <link href="CSS%20Files/global.css" rel="stylesheet"/>
     <link href="CSS%20Files/index.css" rel="stylesheet"/>
@@ -35,7 +35,7 @@
     <div class="home" id="blur">
         <video autoplay class="video-slide" loop muted src="public/Banaue.mp4"></video>
         <div class="content">
-            <h1 class="title">Bayan at Panahon</h1>
+            <h1 class="title">Hibla ng Kasaysayan</h1>
             <p>Kasaysayan Natin, Gabay ng Kinabukasan.</p>
 
             <div class="btn-cont">
