--- a/Timeline.html
+++ b/Timeline.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta content="IE-edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Bayan at Panahon</title> <!-- To be follow -->
+    <title>Hibla ng Kasaysayan</title> <!-- To be follow -->
     <!--<link rel="icon" href="resources/pictures/favicon.ico" type="image/x-icon"> -->
     <link href="CSS%20Files/Timeline.css" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
 <body>
 <header class="header">
     <nav>
-        <a href="index.html">Bayan at Panahon</a>
+        <a href="index.html">Hibla ng Kasaysayan</a>
         <div class="nav-links" id="navLinks">
             <ul>
                 <li><a href="index.html">Home</a></li>
