--- a/START OVER/front.html
+++ b/START OVER/front.html
@@ -19,9 +19,9 @@
       <nav class="navbar">
         <div class="nav-links" id="navLinks">
           <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="#Home">Home</a></li>
             <li><a href="#tranding">Periods</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="#references">References</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
@@ -209,10 +209,53 @@
       </div>
     </section>
 
+    <!--CONTACT-->
+    <section class="contact" id="contact">
+      <div class="contact-container">
+        <div class="contact-box">
+          <div class="contact-row">
+            <div class="contact-col">
+              <h2>Hibla Ng Kasaysayan</h2>
+            </div>
+
+            <div class="contact-col">
+              <h3>Menu</h3>
+              <p>Home</p>
+              <p>Periods</p>
+              <p>References</p>
+            </div>
+
+            <div class="contact-col">
+              <h3>Contact Us</h3>
+              <p>Facebook</p>
+              <p>Discord</p>
+              <p>Email</p>
+            </div>
+          </div>
+
+          <div class="contact-row">
+            <img src="resources/footer.avif" alt="Footer Image">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--FOOTER ENDING-->
+    <footer class="footer">
+      <div class="footer-text">
+        <p>Copyright &copy; 2024 by Caberte, Wagan, Gulapa, Dela Torre, Perdido | All Rights Reserved</p>
+      </div>
+
+      <div class="footer-iconTop">
+        <a href="#"><i class="fa-solid fa-chevron-up"></i></a>
+      </div>
+    </footer>
+
     <!--JAVASCRIPTS-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/13665e3f06.js" crossorigin="anonymous"></script>
     <script src="front.js"></script>
   </body>
 
