--- a/START OVER/front.html
+++ b/START OVER/front.html
@@ -35,19 +35,9 @@
         <video autoplay class="video-slide" loop muted src="resources/Banaue.mp4"></video>
         <div class="content">
           <h1 class="title">Hibla ng Kasaysayan</h1>
-          <p>Kasaysayan Natin, Gabay ng Kinabukasan.</p>
+          <p>Tuklasin ang bawat yugto ng ating nakaraan—mula sa sinaunang panahon, kolonyal na pananakop, hanggang sa kasarinlan at modernong panahon. Alamin ang mga kuwento, kultura, at aral na naghubog sa ating bayan. Sama-sama nating balikan ang kasaysayan upang maunawaan ang kasalukuyan at paghandaan ang mas maliwanag na kinabukasan</p>
 
-          <div class="btn-cont">
-            <div class="row">
 
-              <!--Button-->
-              <div class="btn-padding">
-                <a class="btn" href="country.html" id="era">Take me</a>
-              </div>
-
-            </div>
-          </div>
-        </div>
       </div>
     </section>
 
@@ -64,38 +54,42 @@
             <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
               <div class="tranding-slide-img">
-                <img src="resources/exampel.png" alt="Tranding">
+                <img src="resources/precolonial%20period.jpg" alt="Tranding">
               </div>
-              <div class="tranding-slide-content"><a href="index.html">
-                <h1 class="food-price">1</h1>
+              <div class="tranding-slide-content">
+                <h1 class="food-price">
+                    <a class="btn" href="front.html" id="era">Silipin</a>
+                </h1>
                 <div class="tranding-slide-content-bottom">
                   <h2 class="food-name">
-                    1972
+                    Pre-Colonial Period
                   </h2>
                   <h3 class="food-rating">
-                    <span>World War II and Japanese Occupation</span>
+                    <span>500,000 BC - 10th-15th Century</span>
                   </h3>
                 </div>
-              </a></div>
+              </div>
             </div>
             <!-- Slide-end -->
 
             <!-- Slide-start -->
             <div class="swiper-slide tranding-slide">
               <div class="tranding-slide-img">
-                <img src="resources/exampel.png" alt="Tranding">
+                <img src="resources/spanish%20colonial%20period.webp" alt="Tranding">
               </div>
-              <div class="tranding-slide-content"><a href="index.html">
-                <h1 class="food-price">1</h1>
+              <div class="tranding-slide-content">
+                <h1 class="food-price">
+                  <a class="btn" href="front.html" id="era">Silipin</a>
+                </h1>
                 <div class="tranding-slide-content-bottom">
                   <h2 class="food-name">
-                    1972
+                    Spanish Colonial Period
                   </h2>
                   <h3 class="food-rating">
-                    <span>World War II and Japanese Occupation</span>
+                    <span>1521-1898</span>
                   </h3>
                 </div>
-              </a></div>
+              </div>
             </div>
             <!-- Slide-end -->
 
