header and footer change

--- a/test.html
+++ b/test.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+<!--NAVIGATION BAR WITH LOGO-->
 <header class="header">
     <a href="front.html" class="logo">Hibla ng Kasaysayan</a>
 
@@ -211,6 +212,7 @@
 
 
 
+<!--FOOTER ENDING-->
 <footer class="footer">
     <div class="footer-text">
         <p>Copyright &copy; 2024 by Caberte, Wagan, Gulapa, Dela Torre, Perdido | All Rights Reserved</p>
@@ -221,7 +223,9 @@
     </div>
 </footer>
 
-<script src="script.js"></script>
+<script src="test.js"></script>
+<script src="https://kit.fontawesome.com/13665e3f06.js" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
