references page added done

--- a/START OVER/front.html
+++ b/START OVER/front.html
@@ -20,8 +20,8 @@
         <div class="nav-links" id="navLinks">
             <ul>
                 <li><a href="#Home">Home</a></li>
-                <li><a href="#tranding">Periods</a></li>
-                <li><a href="#references">References</a></li>
+                <li><a href="#period">Periods</a></li>
+                <li><a href="references.html">References</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
