--- a/START OVER/Spanish.html
+++ b/START OVER/Spanish.html
@@ -16,10 +16,8 @@
         <nav class="navbar">
             <div class="nav-links" id="navLinks">
                 <ul>
-                    <li><a href="#Home">Home</a></li>
-                    <li><a href="#tranding">Periods</a></li>
-                    <li><a href="#references">References</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="front.html">Home</a></li>
+                    <li><a href="references.html">References</a></li>
                 </ul>
             </div>
         </nav>
