--- a/START OVER/Precolonial.html
+++ b/START OVER/Precolonial.html
@@ -337,15 +337,15 @@
   <p>
     The Philippines was an active participant in trade networks connecting
     Southeast Asia, China, India, and the Malay Peninsula. Chinese records
-    from the Song Dynasty (960–1279) refer to regular trade with the
+    from the <b>Song Dynasty (960–1279)</b> refer to regular trade with the
     “Ma-i” (believed to be Mindoro), which exported beeswax, cotton,
     and gold in exchange for ceramics and silk. Archaeological evidence,
-    such as Ming Dynasty ceramics and gold artifacts from Surigao,
+    such as <b>Ming Dynasty</b> ceramics and gold artifacts from Surigao,
     confirms the flourishing trade economy.
   </p>
 
   <p>
-    The discovery of the Butuan Boats, dated to the 4th–13th centuries,
+    The discovery of the <b>Butuan Boats</b>, dated to the 4th–13th centuries,
     highlights the region’s advanced shipbuilding skills and its role in
     maritime trade. Butuan was known as a major trading port, particularly
     for its gold, which remains some of the finest ever unearthed in Southeast Asia.
