--- a/START OVER/Precolonial.html
+++ b/START OVER/Precolonial.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Hatdog</title>
-  <link href="Spanish.css" rel="stylesheet">
+  <link href="Precolonial.css" rel="stylesheet">
 
 </head>
 <body>
@@ -356,7 +356,7 @@
 
 </div>
 
-<script src="Spanish.js"></script>
+<script src="Precolonial.js"></script>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/13665e3f06.js"></script>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBILxDLxvd-04oAL32KLWGzJWmccRJ9mbQ&callback=initMap"></script>
