new America page UEUEUE

--- a/START OVER/Spanish.html
+++ b/START OVER/Spanish.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hatdog</title>
+    <title>Hibla ng Kasaysayan</title>
     <link href="Spanish.css" rel="stylesheet">
 
 </head>
@@ -598,7 +598,7 @@
     <div class="col">
         <div class="Establishment of the First Spanish Settlement Pic">
             <img class="img"
-                 src="resources/When-Did-The-Spanish-Colonized-The-Philippines.jpg">
+                 src="resources/resistance.jpg">
         </div>
     </div>
 
@@ -631,7 +631,7 @@
     <div class="col">
         <div class="Establishment of the First Spanish Settlement Pic">
             <img class="img"
-                 src="resources/When-Did-The-Spanish-Colonized-The-Philippines.jpg">
+                 src="resources/war.webp">
         </div>
     </div>
 
@@ -664,7 +664,7 @@
     <div class="col">
         <div class="Establishment of the First Spanish Settlement Pic">
             <img class="img"
-                 src="resources/When-Did-The-Spanish-Colonized-The-Philippines.jpg">
+                 src="resources/ilus.jpg">
         </div>
     </div>
 
@@ -694,9 +694,8 @@
 <div class="popup" id="popup9">
 
     <div class="col">
-        <div class="Establishment of the First Spanish Settlement Pic">
-            <img class="img"
-                 src="resources/When-Did-The-Spanish-Colonized-The-Philippines.jpg">
+        <div class="Arrival of Magellan Map">
+            <div class="street-view" id="gomburza-street-view"></div>
         </div>
     </div>
 
@@ -726,7 +725,7 @@
     <div class="col">
         <div class="Establishment of the First Spanish Settlement Pic">
             <img class="img"
-                 src="resources/When-Did-The-Spanish-Colonized-The-Philippines.jpg">
+                 src="resources/ilustrados.jpg">
         </div>
     </div>
 
@@ -778,11 +777,11 @@
     <div class="col">
         <div class="Establishment of the First Spanish Settlement Pic">
             <img class="img"
-                 src="resources/When-Did-The-Spanish-Colonized-The-Philippines.jpg">
+                 src="resources/ph_revolution.jpg">
         </div>
     </div>
 
-    <h3>1521 - Arrival of Magellan</h3>
+    <h3>1896 - Philippine Revolution Begins</h3>
 
     <p>
         Portuguese explorer Ferdinand Magellan, sailing under the Spanish flag, arrives in the
@@ -811,7 +810,7 @@
         to control trade between East and West.
     </p>
 
-    <a href="#" onclick="toggle()"> Close </a>
+    <a href="#" onclick="toggle11()"> Close </a>
 
 </div>
 
@@ -822,7 +821,7 @@
     <div class="col">
         <div class="Establishment of the First Spanish Settlement Pic">
             <img class="img"
-                 src="resources/When-Did-The-Spanish-Colonized-The-Philippines.jpg">
+                 src="resources/bato.webp">
         </div>
     </div>
 
